# versions

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  README.md  default.nix  package.yaml  release.nix  shell.nix  stack-710.yaml  stack.yaml  versions.cabal
.github/workflows/: ci.yaml
Data/: Versioning.hs  Versions.hs
Distribution/: Test.hs  Version.hs
test/: TH.hs  Test.hs
