name:                versions
version:             0.2.0
synopsis:            Types and parsers for software version numbers.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Colin Woodbury
maintainer:          colingw@gmail.com
-- copyright:           
category:            Distribution
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Versioning
  -- other-modules:       
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8 && <4.9
                     , either >= 4.4.1
                     , extra >= 1.4.1
                     , parsec >=3.1 && <3.2
                     , semigroups >= 0.16.2.2
                     , tasty >= 0.10.1.2
                     , tasty-hunit >= 0.9.2
                     , text >=1.2 && <1.3
                     , text-show >= 2
  -- hs-source-dirs:      
  default-language:    Haskell2010

test-suite versions-test
  type:                exitcode-stdio-1.0
  other-extensions:    OverloadedStrings

  build-depends:       base >=4.8 && <4.9
                     , either >= 4.4.1
                     , extra >= 1.4.1
                     , semigroups >= 0.16.2.2
                     , tasty >= 0.10.1.2
                     , tasty-hunit >= 0.9.2
                     , text >=1.2 && <1.3
                     , text-show >= 2
                     , versions

  hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
